<<<<<<< HEAD
<resources>
    <string name="app_name">基于OneNET的农业物联网系统</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">实时数据</string>
    <string name="title_activity_main_history">历史数据</string>
    <string name="title_activity_main_download_list">下载列表</string>
    <string name="title_activity_main_tools">工具</string>
    <string name="title_activity_main_setup">设置</string>
    <string name="title_activity_main_account">账号</string>
    <string name="title_activity_main_logout">切换账号</string>
    <string name="title_activity_main_exit">退出</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello!</string>
    <string name="nav_header_subtitle">example@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_update_time">更新时间</string>
    <string name="content_null">未知参数</string>
    <string name="content_null_demo">2019&#8211;01&#8211;15 20:14:58.506</string>
    <string name="content_parameter">参数</string>
    <string name="recent_hour">最近一时</string>
    <string name="recent_day">最近一天</string>
    <string name="recent_week">最近一周</string>
    <string name="custom">自定义</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="query">查询</string>
    <string name="context_menu_open">打开</string>
    <string name="context_menu_rename">重命名</string>
    <string name="context_menu_delete">删除</string>
    <string name="choose_device">选择设备</string>
    <string name="apikey">APIKey</string>
    <string name="apikey_value">LO79mBj364HBhD1ZuPNPEDiMMAw=</string>
    <string name="refresh_interval">自动刷新时间</string>
</resources>
=======
<resources>
    <string name="app_name">基于OneNET的农业物联网系统</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">实时数据</string>
    <string name="title_activity_main_history">历史数据</string>
    <string name="title_activity_main_download_list">下载列表</string>
    <string name="title_activity_main_tools">工具</string>
    <string name="title_activity_main_setup">设置</string>
    <string name="title_activity_main_account">账号</string>
    <string name="title_activity_main_logout">切换账号</string>
    <string name="title_activity_main_exit">退出</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello!</string>
    <string name="nav_header_subtitle">example@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_update_time">更新时间</string>
    <string name="content_null">未知参数</string>
    <string name="content_null_demo">2019&#8211;01&#8211;15 20:14:58.506</string>
    <string name="content_parameter">参数</string>
    <string name="recent_hour">最近一时</string>
    <string name="recent_day">最近一天</string>
    <string name="recent_week">最近一周</string>
    <string name="custom">自定义</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="query">查询</string>
    <string name="context_menu_open">打开</string>
    <string name="context_menu_rename">重命名</string>
    <string name="context_menu_delete">删除</string>
    <string name="choose_device">选择设备</string>
    <string name="apikey">APIKey</string>
    <string name="apikey_value">LO79mBj364HBhD1ZuPNPEDiMMAw=</string>
    <string name="refresh_interval">自动刷新时间</string>
</resources>
>>>>>>> 6bad6c40faf49e654987212f313aa28451ae13ab
